--- a/app/views/layout.jade
+++ b/app/views/layout.jade
@@ -1,12 +1,14 @@
 doctype html
 html
-    head
-        meta(charset='UTF-8')
-        title= title
-            |  - Didgeridoo IDE
+  head
+    meta(charset='UTF-8')
+    title= title
+      |  - BloksMonkey IDE
 
-        block styles
-        link(rel='icon', href='favicon.png')
+    link(rel='stylesheet', type='text/css', href='http://fonts.googleapis.com/css?family=Roboto:400,300,300italic,400italic,500,500italic,700,700italic,900,900italic&subset=latin,cyrillic-ext,greek-ext,greek,vietnamese,latin-ext,cyrillic')
+    block styles
+    link(rel='icon', href='favicon.png')
 
     body
+      div#content
         block content
