--- a/public/css/login.css
+++ b/public/css/login.css
@@ -2,6 +2,17 @@
   margin-top: 40px;
 }
 
-input {
+.login-form input {
   width: 300px;
+}
+
+.login-form .forgot-password {
+  padding-top: 5px;
+  text-align: right;
+}
+
+.login-form .forgot-password a {
+  font-size: 14px;
+  text-decoration: none;
+  color: #333;
 }
